load("@rules_cc//cc:defs.bzl", "cc_library")

_detail_hdrs = [
    "include/boost/chrono/detail/**/*.hpp",
]

cc_library(
    name = "chrono",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _detail_hdrs),
    srcs = glob(["src/*.cpp"] + _detail_hdrs),
    deps = [
        "@boost//config",
        "@boost//predef",
        "@boost//mpl",
        "@boost//ratio",
        "@boost//system",
        "@boost//utility",
        "@boost//throw_exception",
    ],
)
