load("@rules_cc//cc:defs.bzl", "cc_library")

_detail_hdrs = [
    "include/boost/chrono/detail/**/*.hpp",
]

cc_library(
    name = "chrono",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    deps = [
        "@boost//libs/config",
        "@boost//libs/predef",
        "@boost//libs/mpl",
        "@boost//libs/ratio",
        "@boost//libs/system",
        "@boost//libs/utility",
        "@boost//libs/throw_exception",
    ],
)
